<resources>
    <string name="allow_all">any interface</string>
    <string name="APPLICATION_GS_BUCKET">YW5kcm9pZC1kaWdpLXNzaGQtcmVwb3J0</string>
    <string name="APPLICATION_GS_CLIENT_ID">ODMxNjA2MjU5NjAyLWkwaXA0Zzg3aXRic3MzOHZqZnU4aTZlNGw0bWk0NW9rLmFwcHMuZ29vZ2xldXNlcmNvbnRlbnQuY29t</string>
    <string name="APPLICATION_GS_CLIENT_SECRET">N0x2RFNXaTFyTXIwdk91aVZnUWsydTI5</string>
    <string name="APPLICATION_GS_TOKEN">MS9YazNJNjBZb0VxMWlLZEU3MUgzS3JGSjZpd29OZWpZNlRsOWh5b2FSUTZF</string>
    <string name="apply">Apply</string>
    <string name="app_name">DigiSSHD</string>
    <string name="app_name_filter_add">Add interface filters</string>
    <string name="app_name_filter_allow">DigiSSHD: Allow connection filters</string>
    <string name="app_name_filter_deny">DigiSSHD: Deny connection filters</string>
    <string name="app_name_filter">DigiSSHD: Filters</string>
    <string name="app_name_filter_remove">Remove interface filters</string>
    <string name="app_name_information">DigiSSHD: Information</string>
    <string name="app_name_multiuser">Multi User Mode</string>
    <string name="app_name_options">DigiSSHD: Options</string>
    <string name="app_name_service">DigiSSHD: Service</string>
    <string name="app_name_sessions">DigiSSHD: Sessions</string>
    <string name="app_name_singleuser">Single User Mode</string>
    <string name="app_name_users">DigiSSHD: Users</string>
    <string name="comm_session_block">session list</string>
    <string name="copy_to_clipboard">copy_to_clipboard</string>
    <string name="dialog_acl_order_title">Change ACL rules order</string>
    <string name="dialog_acl_order_ada_message">Do you want to set ACL rules order to &lt;font color=\'red\'>Deny&lt;/font>, &lt;font color=\'green\'>Allow&lt;/font>, &lt;font color=\'red\'>Implicit Deny&lt;/font>?</string>
    <string name="dialog_acl_order_dad_message">Do you want to set ACL rules order to &lt;font color=\'green\'>Allow&lt;/font>, &lt;font color=\'red\'>Deny&lt;/font>, &lt;font color=\'green\'>Implicit Allow&lt;/font>?</string>
    <string name="dialog_auth_message">Component password</string>
    <string name="service_authmode_title">Authentification mode</string>
    <string name="dialog_component_info_message">component: &lt;font color=\'white\'>%1$s&lt;/font> &lt;br/>
        description: &lt;font color=\'white\'>%2$s&lt;/font> &lt;br/>
          project: &lt;font color=\'white\'>%3$s&lt;/font> &lt;br/>
          license: &lt;font color=\'white\'>%4$s&lt;/font> &lt;br/>
          version: &lt;font color=\'white\'>%5$s&lt;/font> &lt;br/>
          state: &lt;font color=\'white\'>%6$s&lt;/font> &lt;br/>
         port: &lt;font color=\'white\'>%7$s&lt;/font> &lt;br/>
           command line: &lt;font color=\'white\'>%8$s&lt;/font> &lt;br/>
           environment: &lt;font color=\'white\'>%9$s&lt;/font></string>
    <string name="dialog_component_info_title">Component information</string>
    <string name="dialog_exit_message">Do you want to exit?</string>
    <string name="dialog_exit_title">Exit</string>
    <string name="dialog_help_message">Most elements has additional actions that are available by long tap. Some elements labeled with experience level mark. You may toggle highlight of controls in options menu.&lt;br/&gt;&lt;br/&gt;There are three levels:</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_interfaces_legend_title">Interface legend</string>
    <string name="dialog_password_title">&lt;b>%1$s&lt;/b> user password</string>
    <string name="service_selectport_message">Select new TCP port at range from 1 to 65535. The standard TCP port 22 has been assigned for contacting SSH servers, though administrators frequently change it to a non-standard port as an additional security measure.&lt;br/>&lt;br/>Please select &lt;b>unprivileged&lt;/b> port values (above 1023)  for restricted environments</string>
    <string name="service_selectport_title">Select network port</string>
    <string name="dialog_recovery_message">Do you want to start automatic recovery sequence? It will try to shutdown all started components, reinitialize internals and reset error state. If automatic recovery wouldn\'t help, please, let us know with error report that available in the options menu.</string>
    <string name="dialog_recovery_title">Automatic recovery</string>
    <string name="dialog_root_message">Are you sure you want to grant superuser permission to native components?\n\nPlease note that your software must support this function. This option is ignored if you have a firmware with limited functionality.</string>
    <string name="dialog_root_title">Access Permission</string>
    <string name="error_privileged_port_unavailable">privileged port %1$s unavailable</string>
    <string name="image_description">…</string>
    <string name="info_community">community</string>
    <string name="info_copyright">copyright</string>
    <string name="info_interfaces">interfaces</string>
    <string name="info_support">support</string>
    <string name="info_thanks">thanks</string>
    <string name="interface1">interface</string>
    <string name="ip1">ip1</string>
    <string name="ip2">ip2</string>
    <string name="ip3">ip3</string>
    <string name="ip4">ip4</string>
    <string name="legend_interface_active"> - active interface</string>
    <string name="legend_interface_passive"> - passive interface</string>
    <string name="legend_interface_unused"> - unused interface</string>
    <string name="menu_event_logs">Event logs</string>
    <string name="no_components">There are no components</string>
    <string name="no_session_filters">no filters defined</string>
    <string name="no_sessions">There are no sessions</string>
    <string name="no_filters">There are no filters</string>
    <string name="option_android_user_description">set availability, password, private/public key</string>
    <string name="option_android_user_name">default user [android]</string>
    <string name="option_as_root_description">run components under root account</string>
    <string name="option_as_root_name">grant superuser permission</string>
    <string name="option_auth_description">single user [android] / multi-user</string>
    <string name="option_auth_name">authentication mode</string>
    <string name="option_confirm_connection_description">ask for a permission at every unknown session</string>
    <string name="option_confirm_connection_name">confirm connection</string>
    <string name="option_dsa_description">use the DSS dropbear key</string>
    <string name="option_dsa_name">DSA public key encryption</string>
    <string name="option_network_port_description">TCP port, sshd is listening on</string>
    <string name="option_network_port_name">network port</string>
    <string name="option_rsa_description">use the RSA dropbear key</string>
    <string name="option_rsa_name">RSA public key encryption</string>
    <string name="option_write_connection_log_description">keep history of sessions</string>
    <string name="option_write_connection_log_name">write connection log</string>
    <string name="reinstall_complete">reinstall_complete</string>
    <string name="reinstall">reinstall</string>
    <string name="selected_filters">selected filters</string>
    <string name="separator_colon">:</string>
    <string name="separator_dot">.</string>
    <string name="service_environment_reinstall">reinstall\ncomponents</string>
    <string name="service_environment_reset">reset\nto defaults</string>
    <string name="service_environment">service_environment</string>
    <string name="service_environment_users">manage\nusers</string>
    <string name="service_filter_apply">apply %1$s new filter(s) to interface listener</string>
    <string name="service_filter_disabled_all">all interfaces disabled</string>
    <string name="service_filter_disabled">filter %1$s disabled</string>
    <string name="service_filter_enabled_all">all interfaces enabled</string>
    <string name="service_filter_enabled">filter %1$s enabled</string>
    <string name="service_filter_error_select">please select filter</string>
    <string name="service_filter_exists">selection %1$s already exists</string>
    <string name="service_filter_header2">long tap for customize</string>
    <string name="service_filter_header">please leave empty field for \'ANY\' value or select one of pregenerated filters from bellow</string>
    <string name="service_filter_illegal">not possible; please, remove all filter at options tab instead</string>
    <string name="service_filter_remove">remove</string>
    <string name="service_filter_select">%1$s add to selection</string>
    <string name="service_filter_unable_remove">unable to remove last filter</string>
    <string name="service_filter_add">add</string>
    <string name="service_interfaces">listener interface filters</string>
    <string name="service_options">options</string>
    <string name="service_software">service_software</string>
    <string name="session_filter_add_allow">add allow filter %1$s</string>
    <string name="session_filter_add_deny">add deny filter %1$s</string>
    <string name="session_filter_delete_separator">pending to be deleted</string>
    <string name="session_filter_deselected">filter %1$s deactivated</string>
    <string name="session_filter_exists">filter %1$s already exists</string>
    <string name="session_filter_header2">long tap for remove</string>
    <string name="session_filter_header">please leave empty field for \'ANY\' value</string>
    <string name="session_filter_illegal">filter %1$s is illegal</string>
    <string name="session_filter_illegal_outofrange">incorrect filter: IP octet %1$s out of valid range 0 … 255</string>
    <string name="session_filter_include_separator">pending to be included</string>
    <string name="session_filter_selected">filter %1$s activated</string>
    <string name="session_filter_willbedeselected">filter %1$s will be deactivated</string>
    <string name="session_filter_willbeselected">filter %1$s will be activated</string>
    <string name="tab_name_information">Information</string>
    <string name="tab_name_service">Service</string>
    <string name="tab_name_sessions">Sessions</string>
    <string name="user_block_all">Block All</string>
    <string name="user_change_password">password changed for user %1$s</string>
    <string name="user_delete_all">Delete All</string>
    <string name="user_header">long tap for customize</string>
    <string name="user_home_directory_not_exists_message">user_home_directory_not_exists_message</string>
    <string name="user_home_directory_not_exists_title">user_home_directory_not_exists_title</string>
    <string name="user_home">Home directory</string>
    <string name="user_name">Login</string>
    <string name="user_password">Password</string>
    <string name="user_update_user_message">Do you want to save the changes?</string>
    <string name="user_update_user_title">Update user &lt;b>%1$s&lt;/b></string>
    <string name="default_value">default</string>
    <string name="RSA">RSA</string>
    <string name="DSA">DSA</string>
</resources>