<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ DigiSSHD - DigiControl component for Android Platform
 ~ Copyright (c) 2012, Alexey Aksenov ezh@ezh.msk.ru. All rights reserved.
 ~ DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
 ~
 ~ This code is free software; you can redistribute it and/or modify it
 ~ under the terms of the GNU General Public License version 3 or any later
 ~ version, as published by the Free Software Foundation.
 ~
 ~ This code is distributed in the hope that it will be useful, but WITHOUT
 ~ ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
 ~ FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
 ~ version 3 for more details (a copy is included in the LICENSE file that
 ~ accompanied this code).
 ~
 ~ You should have received a copy of the GNU General Public License version
 ~ 3 along with this work; if not, write to the Free Software Foundation,
 ~ Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
 ~
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/user_footer_dynamic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="true"
                android:ellipsize="end"
                android:hint="@string/user_name"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:lines="1"
                android:maxLength="16"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true" >
            </EditText>

            <ImageButton
                android:id="@+id/user_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:onClick="onClickUsersGenerateNewUser"
                android:src="@drawable/btn_plus"
                android:contentDescription="@android:string/untitled" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@android:id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:cursorVisible="true"
                android:ellipsize="end"
                android:hint="@string/user_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"
                android:scrollHorizontally="true"
                android:selectAllOnFocus="true" >
            </EditText>

            <ImageButton
                android:id="@+id/user_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:onClick="onClickUsersShowPassword"
                android:src="@drawable/btn_eye"
                android:contentDescription="@android:string/untitled" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/user_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onClickUsersApply"
            android:text="@string/apply" />

        <Button
            android:id="@+id/user_footer_toggle_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onClickUsersToggleBlockAll"
            android:text="@string/user_block_all" />

        <Button
            android:id="@+id/user_footer_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onClickUsersDeleteAll"
            android:text="@string/user_delete_all" />
    </LinearLayout>

</LinearLayout>